# telephony-mcp

./: .semgrep.yml  CHANGELOG.md  README.md  docker-compose.yml  justfile  pyproject.toml  start.ps1
asterisk/: ari.conf  extensions.conf  modules.conf  pjsip.conf
docs/: TESTING.md
src/telephony_mcp/: server.py
src/telephony_mcp/providers/: asterisk_provider.py  base.py  twilio_provider.py
